--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,14 +27,16 @@ Author URI: https://cloudsdale.co.uk/
 //  5. Containers
 //  6. Buttons
 //  7. Video
-//  8. Carousel
+//  8. Images
 //  9. Single Blog Post
 //  10. Default Page
 
-$primary: #051c2b;
-$highlight: #da6519;
+$primary: #ef236b;
+$highlight: #feb002;
 $white: #efeeeb;
 $black: #000;
+$sunrise: linear-gradient(to bottom, #feb002, #ef236b);
+$sunset: linear-gradient(to bottom, #0233d1, #ef236b);
 
 $xs: 575px;
 $sm: 576px;
@@ -52,6 +54,12 @@ body,
 html {
   width: 100%;
   height: 100%;
+}
+body {
+  background-image: url("../Starsky/assets/img/photos/AdobeStock_569746674.png"); /* Replace 'your-image.jpg' with the path to your background image */
+  background-repeat: repeat;
+  /* Add other styles as needed */
+  margin: 0; /* Remove default body margin for a cleaner look */
 }
 // Settings for navbar in edit mode
 .coming-soon {
@@ -75,7 +83,7 @@ body.logged-in {
   }
 }
 body {
-  background-color: $primary;
+  background-color: $white;
 }
 
 .flex-row {
@@ -94,23 +102,53 @@ body {
 // ===========================================================================
 //  2. Typography
 // ===========================================================================
-
-h1,
-h2,
+@font-face {
+  font-family: "Falco Outline";
+  src: url("../Starsky/assets/fonts/Falco_Black_Outline.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Falco Negative";
+  src: url("../Starsky/assets/fonts/Falco-Black-Inline-Negative.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Falco Black";
+  src: url("../Starsky/assets/fonts/FalcoBlack.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Monda";
+  src: url("../Starsky/assets/fonts/Monda-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+h1 {
+  font-family: "Falco Negative", sans-serif;
+  font-style: normal;
+}
+h2 {
+  font-family: "Falco Outline", sans-serif;
+  font-style: normal;
+}
 h3,
 h4,
 h5 {
-  font-family: "neue-haas-grotesk-display", sans-serif;
-  font-weight: 700;
+  font-family: "Falco Black", sans-serif;
   font-style: normal;
+  color: $primary;
 }
 
 body,
 p {
-  font-family: "neue-haas-grotesk-display", sans-serif;
-  font-weight: 500;
+  font-family: "Monda", sans-serif;
+
   font-style: normal;
-  color: $white;
+  color: $black;
 }
 .menu-item a,
 .btn,
@@ -149,58 +187,30 @@ a:visited {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: $primary;
+  background: $sunrise;
   height: 45px;
   z-index: 999;
   transition: height 0.5s ease-in-out;
 }
-@media (min-width: $xs) {
-  .cm-nav {
-    height: 72px;
-  }
+
+.cm-nav {
+  height: 72px;
 }
+
 .cm-nav-inner {
   position: relative;
 }
 
 .navbar-brand {
-  background-color: $white;
-  width: 130px;
-  position: absolute;
-  height: 50px;
-  top: 0;
-  left: calc(50% - 65px);
-  border-bottom-left-radius: 7px;
-  border-bottom-right-radius: 7px;
-  transition: height 0.5s ease-in-out;
-
   img {
-    left: calc(50% - 50px);
+    left: calc(50% - 110px);
     position: relative;
-    height: 30px;
-    top: 10px;
+    width: 220px;
+    top: -10px;
     transition: 0.5s ease-in-out;
   }
 }
-.navbar-brand img {
-  width: 100px;
-  max-height: auto;
-}
-@media (min-width: $xs) {
-  .navbar-brand img {
-    width: 150px;
-  }
-  .navbar-brand {
-    width: 200px;
-    height: 80px;
-    left: calc(50% - 100px);
-    transition: height 0.5s ease-in-out;
-    img {
-      left: calc(50% - 75px);
-      height: 60px;
-    }
-  }
-}
+
 .menu-toggle {
   position: absolute;
   top: 5px;
@@ -282,9 +292,16 @@ a:visited {
     color: $highlight;
   }
 }
-
+.offcanvas {
+  width: 100%;
+  background: $sunrise;
+}
+.offcanvas-header {
+  img {
+    width: 200px;
+  }
+}
 .offcanvas-footer {
-  background-color: $primary;
   a img {
     width: 2em;
     height: 2em;
@@ -317,10 +334,21 @@ a:visited {
 footer a:hover {
   color: $highlight;
 }
+.btn-close {
+  background-image: url(assets/img/icons/close.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
 // ===========================================================================
 //  4. Footer
 // ===========================================================================
-
+#footer {
+  background: $sunset;
+}
 //remove at bottom of footer
 .page {
   margin: 0;
@@ -371,245 +399,192 @@ footer a:hover {
 // ===========================================================================
 //  5. Containers
 // ===========================================================================
-.white-box {
-  background-color: $white;
-  padding-top: 3em;
-  padding-bottom: 3em;
-}
 
-.white-content-box {
-  background-color: $primary;
-  width: 100%;
-  padding: 2rem;
-  -webkit-box-shadow: 0 0 0 2px $highlight inset;
-  box-shadow: 0 0 0 2px $highlight inset;
-  border: 1rem solid $primary;
-  color: #fff;
-}
-@media (min-width: $lg) {
-  .white-content-box {
-    width: 50%;
-  }
-}
-.square-box::before {
-  content: "";
-  display: block;
-  padding-top: 100%;
-}
-
-.center-home {
-  display: flex;
-  height: 100vh;
-  justify-content: space-around;
-  flex-direction: column;
-  h1 {
-    color: $white;
-  }
-  .btn {
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-.homepage-box {
-  background-color: rgba(5, 28, 43, 1);
-  border-radius: 7px;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  h1 {
-    font-weight: 500;
-  }
-}
 // ===========================================================================
 //  6. Buttons
 // ===========================================================================
-.btn {
-  font-family: "neue-haas-grotesk-display", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  text-transform: lowercase;
-  letter-spacing: 1px;
-  border: 0;
-  transition:
-    color 0.15s ease-in-out,
-    background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out;
-  padding: 0.84rem 2.14rem;
-  font-size: 0.81rem;
-  margin: 5px 0px;
-  border-radius: 2px;
-}
-.btn:hover {
-  box-shadow:
-    0 5px 11px 0 rgba(0, 0, 0, 0.18),
-    0 4px 15px 0 rgba(0, 0, 0, 0.15);
-}
-.btn-primary {
-  background-color: $primary !important;
-}
-.btn-white {
-  background-color: $white;
-  color: $primary;
+.btn-container {
+  display: inline-block;
+  position: relative;
 }
 
-// WP Buttons
-.wp-block-button__link,
-.wp-block-button__link:visited {
-  font-family: "neue-haas-grotesk-display", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  text-transform: lowercase;
-  letter-spacing: 1px;
-  border: 0;
-  transition:
-    color 0.15s ease-in-out,
-    background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out;
-  padding: 0.84rem 2.14rem;
-  font-size: 0.81rem;
-  margin: 5px 0px;
-  border-radius: 2px;
-  background-color: $primary;
-  color: $white !important;
-}
-.wp-block-button__link:hover {
+.btn:hover {
+  background-position: right center;
   color: $white;
-  -webkit-box-shadow:
-    0 5px 11px 0 rgba(0, 0, 0, 0.18),
-    0 4px 15px 0 rgba(0, 0, 0, 0.15);
-  box-shadow:
-    0 5px 11px 0 rgba(0, 0, 0, 0.18),
-    0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.btn {
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: $white;
+  padding-top: 9px;
+  border-radius: 10px;
+}
+.btn-sunset {
+  background-image: linear-gradient(
+    to right,
+    #ef236b 0%,
+    #0233d1 51%,
+    #ef236b 100%
+  );
+}
+.btn-sunrise {
+  background-image: linear-gradient(
+    to right,
+    #feb002 0%,
+    #ef236b 51%,
+    #feb002 100%
+  );
+}
+
+// ===========================================================================
+//  8. Images
+// ===========================================================================
+
+.round-br {
+  border-bottom-right-radius: 150px;
+}
+.round-l {
+  border-bottom-left-radius: 150px;
+  border-top-left-radius: 150px;
+}
+.round-r {
+  border-bottom-right-radius: 150px;
+  border-top-right-radius: 150px;
+}
+.sml-img {
+  height: 300px;
+}
+
+.lg-img {
+  height: 600px;
+}
+.logo-landing {
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+@media (min-width: $md) {
+  .logo-landing {
+    padding-top: 600px;
+  }
+  .round-br {
+    border-bottom-right-radius: 300px;
+  }
+  .round-l {
+    border-bottom-left-radius: 300px;
+    border-top-left-radius: 300px;
+  }
+  .round-r {
+    border-bottom-right-radius: 300px;
+    border-top-right-radius: 300px;
+  }
+  .sml-img {
+    height: 400px;
+  }
+
+  .lg-img {
+    height: 800px;
+  }
 }
 // ===========================================================================
-//  8. Carousel
+//  9. Appear
 // ===========================================================================
-.lSAction > a {
-  background-image: url(assets/img/icons/controls.png);
-  top: calc(100% - 32px);
+
+.appear2 {
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+  transform: translateY(20px);
 }
-.lSSlideOuter .lSPager.lSpg > li:hover a,
-.lSSlideOuter .lSPager.lSpg > li.active a {
-  background-color: $highlight;
+
+.appear2.inview2 {
+  opacity: 1;
+  -webkit-transform: none;
+  transform: none;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
-.item-body {
-  height: 100%;
-  padding: 0 30px 0 30px;
-  background-color: $primary;
+//make nav appear delayed
+
+#site-navigation .offcanvas-body .navbar-nav ul li {
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+  transform: translateY(20px);
 }
-.item-content {
-  color: $white;
-  display: inline-block;
-  height: 100%;
-  width: 100%;
+#site-navigation .show .offcanvas-body .navbar-nav ul li {
+  opacity: 1;
+  -webkit-transform: none;
+  transform: none;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(1) {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.1s;
+}
+#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(2) {
+  -webkit-transition-delay: 1s;
+  transition-delay: 0.2s;
+}
+
+.appear2.inview2:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.appear2.inview2:nth-child(4) {
+  -webkit-transition-delay: 0.4s;
+  transition-delay: 0.4s;
+}
+
+.appear2.inview2:nth-child(5) {
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+}
+.appear2.inview2:nth-child(6) {
+  -webkit-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+}
+
+.appear2.inview2:nth-child(7) {
+  -webkit-transition-delay: 0.7s;
+  transition-delay: 0.7s;
+}
+
+.appear2.inview2:nth-child(8) {
+  -webkit-transition-delay: 0.8s;
+  transition-delay: 0.8s;
+}
+
+.appear2.inview2:nth-child(9) {
+  -webkit-transition-delay: 0.9s;
+  transition-delay: 0.9s;
+}
+
+.appear2.inview2:nth-child(10) {
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+}
+
+.appear2.inview2:nth-child(11) {
+  -webkit-transition-delay: 1.1s;
+  transition-delay: 1.1s;
+}
+// ===========================================================================
+//  10. Home Page
+// ===========================================================================
+
+.home-intro {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  h5 {
-    margin-top: 1em;
-  }
+  justify-content: center;
 }
-.item-btn {
-  margin-bottom: 64px;
-}
-.carosel-section {
-  margin: 100px 0px;
-}
-.excerpt-height {
-  height: 250px;
-  overflow: hidden;
-}
-// ===========================================================================
-//  9. Single Blog Post
-// ===========================================================================
-#blog-main {
-  padding-top: 400px;
-  padding-bottom: 200px;
-}
-.blog-container {
-  position: relative;
-  padding: 0px 10px;
-  background-color: $white;
-  color: $black;
-}
-.blog-content {
-  top: -100px;
-  position: relative;
-}
-.post-thumb {
-  height: 400px;
-  width: 400px;
-  margin-right: auto;
-  margin-left: auto;
-  position: relative;
-  z-index: 3;
-  top: -200px;
-}
-@media (min-width: $md) {
-  .blog-container {
-    padding: 0px 20px;
-  }
-}
-@media (min-width: $lg) {
-  .blog-container {
-    padding: 0px 50px;
-  }
-}
-@media (min-width: $xl) {
-  .post-thumb {
-    margin-right: 0px;
-  }
-  .blog-container {
-    padding: 0px 100px;
-  }
-}
-@media (min-width: $xxl) {
-  .blog-container {
-    padding: 0px 200px;
-  }
-}
-
-// ===========================================================================
-//  10. Default Page
-// ===========================================================================
-
-#page-main {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.page-container {
-  position: relative;
-  padding: 10px 10px;
-  background-color: $white;
-  color: $black;
-  border-radius: 7px;
-}
-.page-content {
-  position: relative;
-}
-@media (min-width: $md) {
-  .page-container {
-    padding: 20px 20px;
-  }
-}
-@media (min-width: $lg) {
-  .page-container {
-    padding: 50px 50px;
-  }
-}
-@media (min-width: $xl) {
-  .page-container {
-    padding: 100px 100px;
-  }
-}
-@media (min-width: $xxl) {
-  .page-container {
-    padding: 200px 200px;
-  }
+.home-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
